<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">
    <!-- Roboto -->
    <TextView
        android:id="@+id/tv_roboto_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_black" />

    <TextView
        android:id="@+id/tv_roboto_black_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_blackitalic" />

    <TextView
        android:id="@+id/tv_roboto_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_bold" />

    <TextView
        android:id="@+id/tv_roboto_bold_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_bolditalic" />

    <TextView
        android:id="@+id/tv_roboto_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_italic" />

    <TextView
        android:id="@+id/tv_roboto_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_light" />

    <TextView
        android:id="@+id/tv_roboto_light_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_lightitalic" />

    <TextView
        android:id="@+id/tv_roboto_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_medium" />

    <TextView
        android:id="@+id/tv_roboto_medium_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_mediumitalic" />

    <TextView
        android:id="@+id/tv_roboto_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_regular" />

    <TextView
        android:id="@+id/tv_roboto_thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_thin" />

    <TextView
        android:id="@+id/tv_roboto_thin_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roboto_thinitalic" />
    <!-- Android Nation -->
    <TextView
        android:id="@+id/tv_android_nation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_nation" />

    <TextView
        android:id="@+id/tv_android_nation_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_nation_bold" />

    <TextView
        android:id="@+id/tv_android_nation_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_nation_italic" />
    <!-- Droid Robot -->
    <TextView
        android:id="@+id/tv_droid_robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_robot" />
    <!-- Droid Serif -->
    <TextView
        android:id="@+id/tv_droid_serif_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_serif_bold" />

    <TextView
        android:id="@+id/tv_droid_serif_bold_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_serif_bold_italic" />

    <TextView
        android:id="@+id/tv_droid_serif_italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_serif_italic" />

    <TextView
        android:id="@+id/tv_droid_serif_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_serif_regular" />
    <!-- Freedom -->
    <TextView
        android:id="@+id/tv_freedom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freedom" />
    <!-- Fun Raiser -->
    <TextView
        android:id="@+id/tv_fun_raiser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fun_raiser" />
    <!-- Green Avocado -->
    <TextView
        android:id="@+id/tv_green_avocado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_avocado" />
    <!-- Recognition -->
    <TextView
        android:id="@+id/tv_recognition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recognition" />
    <!-- Walkway -->
    <TextView
        android:id="@+id/tv_walkway_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Walkway Black" />

    <Button
        android:id="@+id/toast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/toast_fonts"/>
</LinearLayout>
